[package]
name = "yoshino-derive"
version = "0.1.0"
edition = "2021"

license = "MIT"
description = "Derive macro crate of Yoshino, a simple structural data modeling library"
homepage = "https://github.com/linmx0130/yoshino"
readme = "../README.md"
repository = "https://github.com/linmx0130/yoshino"
keywords = ["database"]

[lib]
proc-macro = true

[dependencies]
yoshino-core = {path = "../core", version="0.1"}
