[package]
name = "yoshino-prelude"
version = "0.1.0"
edition = "2021"

license = "MIT"
description = "Yoshino, a simple structural data modeling library"
homepage = "https://github.com/linmx0130/yoshino"
readme = "../README.md"
repository = "https://github.com/linmx0130/yoshino"
keywords = ["database"]

[dependencies]
yoshino-core= {path= "../core", version="0.1"}
yoshino-derive= {path= "../derive", version="0.1"}
