[package]
name = "yoshino-sqlite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libsqlite3-sys = {version = "0.25", features = ["bundled"]}
libc = "0.2"
# rusqlite = { version = "0.28.0", features = ["bundled"] }
yoshino-core = {path = "../core"}