[package]
name = "yoshino-sqlite"
version = "0.1.0"
edition = "2021"

license = "MIT"
description = "SQLite 3 adaptor for Yoshino, a simple structural data modeling library"
homepage = "https://github.com/linmx0130/yoshino"
readme = "../README.md"
repository = "https://github.com/linmx0130/yoshino"
keywords = ["database", "sqlite"]

[dependencies]
libsqlite3-sys = {version = "0.25", features = ["bundled"]}
libc = "0.2"
# rusqlite = { version = "0.28.0", features = ["bundled"] }
yoshino-core = {path = "../core", version="0.1"}