[package]
name = "test_app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yoshino-core= {path= "../core"}
yoshino-derive= {path= "../derive"}
yoshino-sqlite= {path= "../sqlite"}
yoshino-user = {path="../user"}
bytes = "1"